--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   http: 
   get_it: ^7.1.0
   flutter_markdown: ^0.6.2
+  email_validator: ^2.0.1
+  lottie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - Assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
