--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_markdown: ^0.6.2
   email_validator: ^2.0.1
   lottie: ^1.1.0
+  transparent_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
