--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   email_validator: ^2.0.1
   lottie: ^1.1.0
   transparent_image: ^2.0.0
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
