--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   lottie: ^1.1.0
   transparent_image: ^2.0.0
   animated_text_kit: ^4.2.1
+  flame: ^1.0.0-releasecandidate.16
 
 dev_dependencies:
   flutter_test:
