--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   transparent_image: ^2.0.0
   animated_text_kit: ^4.2.1
   flame: ^1.0.0-releasecandidate.16
+  url_launcher: ^6.0.18
 
 dev_dependencies:
   flutter_test:
